This is fine for now...

--- a/Proposal/thesis_paper/document.bib
+++ b/Proposal/thesis_paper/document.bib
@@ -702,3 +702,30 @@ pages = {331-339}
   year={1986},
   publisher={Springer}
 }
+
+@incollection{tresp2008towards,
+  title={Towards machine learning on the semantic web},
+  author={Tresp, Volker and Bundschus, Markus and Rettinger, Achim and Huang, Yi},
+  booktitle={Uncertainty reasoning for the Semantic Web I},
+  pages={282--314},
+  year={2008},
+  publisher={Springer}
+}
+
+@inproceedings{kappara2011liddm,
+  title={LiDDM: A Data Mining System for Linked Data.},
+  author={Kappara, Venkata Narasimha Pavan and Ichise, Ryutaro and Vyas, OP},
+  booktitle={LDOW},
+  year={2011}
+}
+
+@article{nadeau2007survey,
+  title={A survey of named entity recognition and classification},
+  author={Nadeau, David and Sekine, Satoshi},
+  journal={Lingvisticae Investigationes},
+  volume={30},
+  number={1},
+  pages={3--26},
+  year={2007},
+  publisher={John Benjamins publishing company}
+}
